--- a/src/templates/profile/register_company.html
+++ b/src/templates/profile/register_company.html
@@ -16,15 +16,151 @@
             {% csrf_token %}
             {{ form.non_field_errors }}
 
-            {% for field in form %}
-                <div>
-                    <label class="block text-primary_black font-medium" for="{{ field.id_for_label }}">{{ field.label }}</label>
-                    {{ field }}
-                    {% if field.errors %}
-                        <div class="text-red-500 text-sm">{{ field.errors }}</div>
-                    {% endif %}
+            <div>
+                <label class="block text-primary_black font-medium" for="id_username">Nombre de Usuario</label>
+                <input type="text" name="username" id="id_username" value="{{ form.username.value|default_if_none:'' }}"
+                    class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
+                    placeholder="Nombre de Usuario" required>
+                {% if form.username.errors %}
+                <div class="text-red-500 text-sm">{{ form.username.errors.0 }}</div>
+                {% endif %}
+            </div>
+
+            <div>
+                <label class="block text-primary_black font-medium" for="id_company_name">Nombre de la Empresa</label>
+                <input type="text" name="company_name" id="id_company_name" value="{{ form.company_name.value|default_if_none:'' }}"
+                    class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
+                    placeholder="Nombre de la Empresa" required>
+                {% if form.company_name.errors %}
+                <div class="text-red-500 text-sm">{{ form.company_name.errors.0 }}</div>
+                {% endif %}
+            </div>
+
+            <div>
+                <label class="block text-primary_black font-medium" for="id_nit">NIT</label>
+                <input type="text" name="nit" id="id_nit" value="{{ form.nit.value|default_if_none:'' }}"
+                    class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
+                    placeholder="NIT" required>
+                {% if form.nit.errors %}
+                <div class="text-red-500 text-sm">{{ form.nit.errors.0 }}</div>
+                {% endif %}
+            </div>
+
+            <div>
+                <label class="block text-primary_black font-medium" for="id_business_type">Tipo de Negocio</label>
+                <input type="text" name="business_type" id="id_business_type" value="{{ form.business_type.value|default_if_none:'' }}"
+                    class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
+                    placeholder="Tipo de Negocio" required>
+                {% if form.business_type.errors %}
+                <div class="text-red-500 text-sm">{{ form.business_type.errors.0 }}</div>
+                {% endif %}
+            </div>
+
+            <div>
+                <label class="block text-primary_black font-medium" for="id_country">País</label>
+                <input type="text" name="country" id="id_country" value="{{ form.country.value|default_if_none:'' }}"
+                    class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
+                    placeholder="País" required>
+                {% if form.country.errors %}
+                <div class="text-red-500 text-sm">{{ form.country.errors.0 }}</div>
+                {% endif %}
+            </div>
+
+            <div>
+                <label class="block text-primary_black font-medium" for="id_business_vertical">Vertical de Negocio</label>
+                <input type="text" name="business_vertical" id="id_business_vertical" value="{{ form.business_vertical.value|default_if_none:'' }}"
+                    class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
+                    placeholder="Vertical de Negocio" required>
+                {% if form.business_vertical.errors %}
+                <div class="text-red-500 text-sm">{{ form.business_vertical.errors.0 }}</div>
+                {% endif %}
+            </div>
+
+            <div>
+                <label class="block text-primary_black font-medium" for="id_address">Dirección</label>
+                <input type="text" name="address" id="id_address" value="{{ form.address.value|default_if_none:'' }}"
+                    class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
+                    placeholder="Dirección" required>
+                {% if form.address.errors %}
+                <div class="text-red-500 text-sm">{{ form.address.errors.0 }}</div>
+                {% endif %}
+            </div>
+
+            <div>
+                <label class="block text-primary_black font-medium" for="id_legal_representative">Representante Legal</label>
+                <input type="text" name="legal_representative" id="id_legal_representative" value="{{ form.legal_representative.value|default_if_none:'' }}"
+                    class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
+                    placeholder="Representante Legal" required>
+                {% if form.legal_representative.errors %}
+                <div class="text-red-500 text-sm">{{ form.legal_representative.errors.0 }}</div>
+                {% endif %}
+            </div>
+
+            <div>
+                <label class="block text-primary_black font-medium" for="id_phone">Teléfono</label>
+                <input type="text" name="phone" id="id_phone" value="{{ form.phone.value|default_if_none:'' }}"
+                    class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
+                    placeholder="Teléfono" required>
+                {% if form.phone.errors %}
+                <div class="text-red-500 text-sm">{{ form.phone.errors.0 }}</div>
+                {% endif %}
+            </div>
+
+            <div>
+                <label class="block text-primary_black font-medium" for="id_email">Correo Electrónico</label>
+                <input type="email" name="email" id="id_email" value="{{ form.email.value|default_if_none:'' }}"
+                    class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
+                    placeholder="Correo Electrónico" required>
+                {% if form.email.errors %}
+                <div class="text-red-500 text-sm">{{ form.email.errors.0 }}</div>
+                {% endif %}
+            </div>
+
+            <div>
+                <label class="block text-primary_black font-medium" for="id_password1">Contraseña</label>
+                <input type="password" name="password1" id="id_password1"
+                    class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
+                    placeholder="Contraseña" required>
+                {% if form.password1.errors %}
+                <div class="text-red-500 text-sm">{{ form.password1.errors.0 }}</div>
+                {% endif %}
+            </div>
+
+            <div>
+                <label class="block text-primary_black font-medium" for="id_password2">Confirmar Contraseña</label>
+                <input type="password" name="password2" id="id_password2"
+                    class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
+                    placeholder="Confirmar Contraseña" required>
+                {% if form.password2.errors %}
+                <div class="text-red-500 text-sm">{{ form.password2.errors.0 }}</div>
+                {% endif %}
+            </div>
+
+            <div>
+                <label class="block text-primary_black font-medium">Foto de Perfil (opcional)</label>
+                <div class="mt-1 flex justify-center items-center px-6 pt-5 pb-6 border-2 border-dashed rounded-md relative">
+                    <div class="space-y-1 text-center">
+                        <svg class="mx-auto h-12 w-12 text-gray-400" stroke="currentColor" fill="none" viewBox="0 0 48 48" aria-hidden="true">
+                            <path d="M8 19v11a2 2 0 002 2h28a2 2 0 002-2V19M16 7h16v6a2 2 0 01-2 2H18a2 2 0 01-2-2V7z" />
+                        </svg>
+                        <div class="flex text-sm text-gray-600 justify-center">
+                            <label for="id_photo" class="relative cursor-pointer bg-white rounded-md font-medium text-primary_medium hover:text-primary_dark focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-primary_medium">
+                                <span>Selecciona la imagen aquí</span>
+                                <input id="id_photo" name="photo" type="file" class="sr-only">
+                            </label>
+                        </div>
+                        <p class="text-xs text-gray-500">Puedes adjuntar un archivo aquí</p>
+                        <div id="uploadSuccess" class="hidden absolute top-0 right-0 mt-2 mr-2 text-green-500">
+                            <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            </svg>
+                        </div>
+                    </div>
                 </div>
-            {% endfor %}
+                {% if form.photo.errors %}
+                <div class="text-red-500 text-sm mt-2">{{ form.photo.errors.0 }}</div>
+                {% endif %}
+            </div>
 
             <div class="flex justify-center">
                 <button type="submit" class="bg-primary_dark text-white font-bold py-3 px-6 rounded-md hover:bg-primary_black focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary_dark">
@@ -35,14 +171,8 @@
     </div>
     {% endif %}
 
-    <!-- Pop-Up de Confirmación -->
     <div id="confirmationModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden">
         <div class="bg-white p-6 rounded-lg shadow-lg w-96">
-            <div class="flex justify-end">
-                <button id="closeModal" class="text-gray-500 hover:text-gray-700">
-                    &times;
-                </button>
-            </div>
             <div class="text-center">
                 <svg class="mx-auto h-12 w-12 text-primary_medium mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
@@ -56,28 +186,28 @@
         </div>
     </div>
 
-    <!-- JavaScript para el Pop-Up -->
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const registrationSuccessful = {{ registration_successful|yesno:"true,false" }};
             const modal = document.getElementById('confirmationModal');
             const acceptButton = document.getElementById('acceptButton');
-            const closeModal = document.getElementById('closeModal');
 
-            // Muestra el modal si el registro fue exitoso
             if (registrationSuccessful) {
                 modal.classList.remove('hidden');
             }
 
-            // Cierra el modal y redirige al dashboard al hacer clic en aceptar
             acceptButton.addEventListener('click', function() {
                 window.location.href = "/dashboard/";
             });
+        });
 
-            // Cierra el modal al hacer clic en la "x"
-            closeModal.addEventListener('click', function() {
-                modal.classList.add('hidden');
-            });
+        document.getElementById('id_photo').addEventListener('change', function () {
+            if (this.files.length > 0) {
+                document.getElementById('uploadSuccess').classList.remove('hidden');
+                setTimeout(() => {
+                    document.getElementById('uploadSuccess').classList.add('hidden');
+                }, 3000); 
+            }
         });
     </script>
 </div>
