--- a/src/templates/login/login.html
+++ b/src/templates/login/login.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load socialaccount %}
 
 {% block title %}Log In - Flowlance{% endblock %}
 
@@ -45,13 +46,13 @@
             <div class="flex-1 border-t border-gray-300"></div>
         </div>
 
-        <!-- Botón de Google -->
-        <!-- <button
+       
+        <a href="{% provider_login_url 'google' %}"
             class="flex items-center justify-center bg-white text-black w-full py-2 border rounded-md mb-4 border-primary_medium">
             <span class="text-primary_black flex gap-4 justify-center text-center items-center">
                 <i> {% include 'icon/google_icon.html' with w='32' h='32' %} </i> Continuar con Google
             </span>
-        </button> -->
+        </a>
 
         <!-- Enlaces adicionales -->
         <a href="#" class="text-primary_black hover:underline mb-4 block font-bold">¿Olvidaste tu contraseña?</a>
