fix: send response 2

--- a/src/templates/profile/freelancer_profile.html
+++ b/src/templates/profile/freelancer_profile.html
@@ -30,7 +30,7 @@
                 <div class="flex justify-between items-center">
                     <div class="flex items-center space-x-4">
                         <p class="text-xl font-semibold text-primary_black">{{ rating.stars }} estrellas</p>
-                        <p class="text-gray-500 text-sm">por <strong>{{ rating.client.username
+                        <p class="text-gray-500 text-sm">por <strong>{{ rating.client.username }}</strong></p>
                         </strong></p>
                     </div>
                     <p class="text-gray-400 text-sm">{{ rating.created_at|date:"d M Y" }}</p>
